--- a/app/src/main/res/layout/item_message_left.xml
+++ b/app/src/main/res/layout/item_message_left.xml
@@ -13,10 +13,18 @@
         android:layout_margin="3dp"
         android:padding="5dp">
 
+        <ImageView
+            android:id="@+id/photo_icon"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/login_background" />
+
         <TextView
             android:id="@+id/nameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/photo_icon"
             android:layout_weight="0"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textStyle="bold"
@@ -27,6 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/nameTextView"
+            android:layout_toRightOf="@+id/photo_icon"
             android:adjustViewBounds="true" />
 
         <TextView
@@ -34,11 +43,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/nameTextView"
+            android:layout_toRightOf="@+id/photo_icon"
             android:layout_weight="0"
             android:textAppearance="?android:attr/textAppearanceLarge"
             tools:text="Message" />
-
-
     </RelativeLayout>
 
 
