--- a/app/src/main/res/layout/layout_chat_window.xml
+++ b/app/src/main/res/layout/layout_chat_window.xml
@@ -1,17 +1,12 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/lightGray"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sreevidya.opal.screen.home.HomeActivity">
+    tools:showIn="@layout/fragment_chat">
 
     <ListView
         android:id="@+id/messageListView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:divider="@android:color/transparent"
         android:stackFromBottom="true"
@@ -20,20 +15,18 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="@drawable/rounded_button"
+        android:background="@android:color/white"
         android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/photoPickerButton"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
             android:background="@android:drawable/ic_menu_gallery" />
 
         <EditText
@@ -45,14 +38,11 @@
 
         <Button
             android:id="@+id/sendButton"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:background="@drawable/send_button"
+            android:layout_gravity="bottom"
             android:enabled="false"
             android:text="@string/send_button_label" />
 
     </LinearLayout>
-
-</RelativeLayout>
+</merge>
