Changing Login UI

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,15 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sreevidya.opal.LoginActivity">
-
-    <TextView
-        android:id="@+id/buildType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Build type"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+    tools:context="com.sreevidya.opal.screen.login.LoginActivity">
 
     <FrameLayout
         android:id="@+id/fragmentContainer"
