--- a/app/src/main/res/layout/item_message_right.xml
+++ b/app/src/main/res/layout/item_message_right.xml
@@ -3,42 +3,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
     android:layout_marginTop="16dp">
 
     <LinearLayout
-        android:id="@+id/messageDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_margin="3dp"
-        android:orientation="vertical"
-        android:padding="5dp">
+        android:layout_alignParentEnd="true"
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/nameTextView"
+        <LinearLayout
+            android:id="@+id/messageDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textStyle="bold"
-            tools:text="Name" />
+            android:layout_margin="3dp"
+            android:background="@color/colorPrimaryLight"
+            android:orientation="vertical"
+            android:padding="5dp">
+
+            <TextView
+                android:id="@+id/nameTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textStyle="bold"
+                tools:text="Name" />
+
+            <ImageView
+                android:id="@+id/photoImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/nameTextView"
+                android:adjustViewBounds="true" />
+
+            <TextView
+                android:id="@+id/messageTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/nameTextView"
+                android:layout_weight="0"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                tools:text="Message" />
+
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="09:20am"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
 
         <ImageView
-            android:id="@+id/photoImageView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/nameTextView"
-            android:adjustViewBounds="true" />
-
-        <TextView
-            android:id="@+id/messageTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/nameTextView"
-            android:layout_weight="0"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            tools:text="Message" />
-
+            android:id="@+id/photo_icon"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="3dp"
+            android:src="@drawable/login_background" />
 
     </LinearLayout>
 
