--- a/app/src/main/res/layout/item_message_right.xml
+++ b/app/src/main/res/layout/item_message_right.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
-            android:background="@color/colorPrimaryLight"
+            android:background="@drawable/chat_bubble_right"
             android:orientation="vertical"
             android:padding="5dp">
 
@@ -59,7 +59,7 @@
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_marginStart="3dp"
-            android:src="@drawable/login_background" />
+            android:src="@drawable/ic_user" />
 
     </LinearLayout>
 
