--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_login_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorSecondary"
+    android:background="@drawable/login_background"
     android:orientation="vertical"
     tools:context="com.sreevidya.opal.screen.login.fragments.LoginFragment">
 
-    <TextView
+    <ImageView
         android:id="@+id/tvHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="150dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:gravity="center"
-        android:text="@string/app_name"
-        android:textSize="100sp" />
+        android:src="@drawable/opal_logo" />
 
     <LinearLayout
         android:id="@+id/login_details"
@@ -75,17 +73,17 @@
                 android:src="@drawable/ic_password" />
 
             <EditText
-            android:id="@+id/edtPassword"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
+                android:id="@+id/edtPassword"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:hint="Password"
-            android:inputType="textPassword"
-            android:padding="10dp"
-            android:textColor="@android:color/white"
-            android:textColorHint="@android:color/white" />
+                android:inputType="textPassword"
+                android:padding="10dp"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white" />
 
-    </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -117,11 +115,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/colorTransparent"
-                android:text="Log in"
-                android:textColor="@android:color/white"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
+                android:text="@string/log_in"
+                android:textAllCaps="true"
+                android:textColor="@android:color/white" />
 
             <View
                 android:layout_width="1dp"
@@ -135,12 +131,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/colorTransparent"
-                android:text="register"
-                android:textColor="@android:color/white"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
-                tools:layout_editor_absoluteY="248dp" />
+                android:text="@string/register"
+                android:textAllCaps="true"
+                android:textColor="@android:color/white" />
         </LinearLayout>
 
 
@@ -151,13 +144,9 @@
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:layout_marginTop="32dp"
-        android:visibility="invisible"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />
+        android:visibility="invisible" />
 
 
 </RelativeLayout>
