--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -1,20 +1,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorSecondary"
+    android:background="@drawable/login_background"
     tools:context="com.sreevidya.opal.screen.login.fragments.RegistrationFragment">
 
-    <TextView
+    <ImageView
         android:id="@+id/tvHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="150dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:gravity="center"
-        android:text="@string/app_name"
-        android:textSize="100sp" />
+        android:src="@drawable/opal_logo" />
 
     <LinearLayout
         android:id="@+id/login_details"
@@ -102,11 +100,8 @@
                 android:layout_weight="1"
                 android:background="@color/colorTransparent"
                 android:text="@string/create_account"
-                android:textColor="@android:color/white"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnLogin"
-                tools:layout_editor_absoluteY="248dp" />
+                android:textAllCaps="true"
+                android:textColor="@android:color/white" />
 
         </LinearLayout>
 
@@ -116,11 +111,9 @@
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_gravity="center"
-        android:visibility="invisible"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />
+        android:visibility="invisible" />
 
 
 </RelativeLayout>
