--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -80,7 +80,9 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:hint="Password"
+                android:ellipsize="start"
+                android:fontFamily="sans-serif"
+                android:hint="@string/password"
                 android:inputType="textPassword"
                 android:padding="10dp"
                 android:textColor="@android:color/white"
