--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -46,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:hint="@string/username"
+                android:inputType="textPersonName"
                 android:padding="10dp"
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white" />
@@ -105,7 +106,9 @@
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:hint="Password"
+                android:ellipsize="start"
+                android:fontFamily="sans-serif"
+                android:hint="@string/password"
                 android:inputType="textPassword"
                 android:padding="10dp"
                 android:textColor="@android:color/white"
